<ul>
	<li>V0.9.1 Devel
  	<ul>
		<li>2008-08-28 AP - handle editor scrolling in frmEditGrid
		<li>2008-08-28 AP - Fix numeric truncation in frmEditGrid
   		<li>2003-08-25 AP - SSL support for win32.
		<li>2003-08-25 AP - save SSL option under Servers/SSL%d.
		<li>2003-08-24 AP - Provide dummy child item to make [+] appear in tree for table and view.
		<li>2003-08-24 AP - proxy option.
		<li>2003-08-24 AP - Shift-F10 in tree control for context menu.
		<li>2003-08-23 AP - Fixed missing comments and function arguments.
		<li>2003-08-21 AP - Using EVT_TEXT for combobox selchange events.
		<li>2003-08-21 AP - encoding names read from backend, removed from resource.
		<li>2003-08-19 DP - Prevent comments on view columns causing display problems.
		<li>2003-08-19 Marc Persuy - Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale search bug.
		<li>2003-08-18 DP - Correctly quote primary key name in Edit Grid. Was preventing viewing of data in some tables.
		<li>2003-08-17 AP - added REINDEX, frmVacuum->frmMaintenance.
		<li>2003-08-15 AP - added SSL-support.
		<li>2003-08-15 AP - Wording: "maintenance" instead of "reorganize".
		<li>2003-08-14 DP - Shorten minimum length of rule definition to allow 'NOTHING'.
		<li>2003-08-14 DP - Add DROP SQL for rule definitions.
		<li>2003-08-13 AP - Added VERSION Resource for win32.
		<li>2003-08-11 DP - Use compiled HTML help file for Help on windows.
		<li>2003-08-11 AP - Added "Change column" in table property.
		<li>2003-08-11 AP - Corrected SQL generation for table property.
		<li>2003-08-11 AP - Select current item if right click on tree item.
		<li>2003-08-11 AP - Added win32 version resource.
		<li>2003-08-11 AP - Corrected missing quoting for FK.
		<li>2003-08-08 AP - Allow tables without columns for 7.4
		<li>2003-08-08 AP - Support of several new 7.4 features.
		<li>2003-08-08 DP - Added missing helpfile images to Win32 Installer.
		<li>2003-08-07 AP - help system cleanups, support of CHM help for win32.