@@ -1,6 +1,7 @@
 <ul>
 	<li>V0.9.1 Devel
   	<ul>
+		<li>2008-08-29 AP - frmEditGrid: double click on labels resizes column or row
 		<li>2008-08-28 AP - handle editor scrolling in frmEditGrid
 		<li>2008-08-28 AP - Fix numeric truncation in frmEditGrid
    		<li>2003-08-25 AP - SSL support for win32.
